--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,36 +1,6 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chaplin Init</title>
-    <link rel="stylesheet" href="/css/app.css" />
-    <script src="/js/modernizr.js"></script>
-  </head>
-  <body>
-
-    <div class="sticky">
-      <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
-          <li class="name">
-            <h1><a href="/">Chaplin Init</h1>
-          </li>
-        </ul>
-
-        <section class="top-bar-section">
-          <ul class="right">
-            <li><a href="http://github.com/victormours/chaplin-init">Fork us on Github</a></li>
-          </ul>
-        </section>
-      </nav>
-    </div>
-
-    {{{ content }}}
-
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
-</html>
+<head>
+  <title>Lightweight Github</title>
+</head>
+<body>
+  {{{ content }}}
+</body>
