--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,17 +1,3 @@
-<div class="landing-1">
-  <div class="row">
-    <div class="large-12 columns">
-      <h1>Chaplin Init</h1>
-      <h2>An opinionated stack for awesome web development</h2>
-    </div>
-  </div>
-</div>
-<div class="landing-2">
-  <div class="row">
-    <div class="large-12 columns">
-      <h1>Build Web apps in minutes</h1>
-      <p>Chaplin Init features a set of handpicked technologies to make web development faster.</p>
-    </div>
-  </div>
-</div>
+Hello
+<a href='/auth/github'>Sign in with Github</a>
 
