Working basic login

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,3 +1,11 @@
-Hello
-<a href='/auth/github'>Sign in with Github</a>
+{{^ orgs }}
+  <a href='/auth/github'>Sign in with Github</a>
+{{/ orgs }}
+
+{{# orgs }}
+  {{# login."bullgit" }}
+    Yerr a gitch 'arry!
+    Insert code for Firebase chat here
+  {{/ login."bullgit" }}
+{{/ orgs }}
 
