Extract chat partial

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,8 +4,7 @@
 
 {{# orgs }}
   {{# login."bullgit" }}
-    Yerr a gitch 'arry!
-    Insert code for Firebase chat here
+    {{{ chat }}}
   {{/ login."bullgit" }}
 {{/ orgs }}
 
