HTML & content added

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,6 +1,16 @@
+<html lang="en">
 <head>
-  <title>Chitchat</title>
+  <meta charset="utf-8" />
+  <title>chitchat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="theme-color" content="#7f57cf">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   {{{ content }}}
+
+  <script src="js/main.js"></script>
 </body>
