--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -164,7 +164,8 @@ button#send {
   bottom: 0;
   z-index: 2;
   max-width: 50px;
-  padding: 0;
+  max-height: 50px;
+    padding: 0;
 }
 
 .user_avatar img {
@@ -209,12 +210,7 @@ message {
   left: -2em;
 }
 
-message:before {
-  content: attr(data-time-stamp);
-  position: absolute;
-  left: 0;
-  z-index: 2;
-}
+
 message:after {
   display: block;
   content: '';
@@ -253,7 +249,7 @@ message .user .-avatar img  {
 }
 
 message .user .-name {
-  
+  color: #568CCF;
 }
 
 message .user_message {
