Set username from github

--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -5,10 +5,10 @@
 
       <div class="user_infos">
         <a href="#"><i class="icon icon-github"></i></a>
-        <input type="text" class="nameinput" id="name" placeholder="Your name here" >
+        <p id='name'>{{user.login}}</p>
       </div>
     </header>
-    
+
     <aside>
       <ul>
         <li><img src="img/poly_me.png" class="avatar" alt=""></li>
@@ -19,9 +19,9 @@
     </aside>
 
     <div class="chat-messages">
-      <!-- messages here --> 
+      <!-- messages here -->
     </div>
-    
+
     <footer>
       <div class="chat-controls">
         <div class="user_avatar">
