in two places fixed

--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -11,7 +11,7 @@
 
     <aside>
       <ul>
-        <li><img src="img/poly_me.png" class="avatar" alt=""></li>
+        <li><img src="https://avatars.githubusercontent.com/{{user.login}}" class="avatar" alt="{{user.login}}"></li>
         <li><img src="img/poly_me.png" class="avatar" alt=""></li>
         <li><img src="img/poly_me.png" class="avatar" alt=""></li>
         <li><img src="img/poly_me.png" class="avatar" alt=""></li>
@@ -25,7 +25,7 @@
     <footer>
       <div class="chat-controls">
         <div class="user_avatar">
-          <img src="img/poly_me.png" alt="" class="avatar">
+          <img src="https://avatars.githubusercontent.com/{{user.login}}" alt="" class="avatar">
           <p id="name">{{user.login}}</p>
         </div>
 
