--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -1,7 +1,7 @@
 
   <div class="chat-wrapper">
     <header>
-      <h2>bullchat </h2>
+      <h2>chitchat </h2>
 
       <div class="user_infos">
         <a href="#"><i class="icon icon-github"></i></a>
