--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 {{^ params.cookies.token }}
-  <a href='/auth/github'>Log in with Github</a>
+  <a href='/auth/github' class="button">Log in with Github</a>
 {{/ params.cookies.token }}
 
 {{# orgs }}
