--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -9,12 +9,14 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#7f57cf">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/tomorrow-night-eighties.css">
 </head>
 <body>
   {{{ content }}}
 
   <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <script src="scripts/main.js"></script>
 </body>
