--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -335,7 +335,7 @@ code {
     -webkit-box-shadow: inset 0 0 0 .1em #eff0f2;
     box-shadow: inset 0 0 0 .1em #eff0f2;
     border-radius: 4.80000019073486px 4.80000019073486px 4.80000019073486px 4.80000019073486px;
-    font-family: Monaco, Consolas'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier, monospace;
+    font-family: Monaco, Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier, monospace;
     font-weight: 200;
     overflow: auto;
     position: relative;
