--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -2,15 +2,19 @@
 
 @font-face {
   font-family: radikal_regular;
-  src: url("../fonts/radikal/radikal_regular.eot?") format("eot"), url("../fonts/radikal/radikal_regular.woff") format("woff"), url("../fonts/radikal/radikal_regular.svg#radikal_regular") format("svg"), url("../fonts/radikal/radikal_regular.ttf") format("truetype"); }
+  src: url("../fonts/radikal/radikal_regular.eot?") format("eot"), url("../fonts/radikal/radikal_regular.woff") format("woff"), url("../fonts/radikal/radikal_regular.svg#radikal_regular") format("svg"), url("../fonts/radikal/radikal_regular.ttf") format("truetype");
+}
+
 
 @font-face {
   font-family: radikal_bold;
-  src: url("../fonts/radikal/radikal_bold.eot?") format("eot"), url("../fonts/radikal/radikal_bold.woff") format("woff"), url("../fonts/radikal/radikal_bold.svg#radikal_bold") format("svg"), url("../fonts/radikal/radikal_bold.ttf") format("truetype"); }
+  src: url("../fonts/radikal/radikal_bold.eot?") format("eot"), url("../fonts/radikal/radikal_bold.woff") format("woff"), url("../fonts/radikal/radikal_bold.svg#radikal_bold") format("svg"), url("../fonts/radikal/radikal_bold.ttf") format("truetype");
+}
 
 @font-face {
   font-family: radikal_light;
-  src: url("../fonts/radikal/radikal_light.eot?") format("eot"), url("../fonts/radikal/radikal_light.woff") format("woff"), url("../fonts/radikal/radikal_light.svg#radikal_light") format("svg"), url("../fonts/radikal/radikal_light.ttf") format("truetype"); }
+  src: url("../fonts/radikal/radikal_light.eot?") format("eot"), url("../fonts/radikal/radikal_light.woff") format("woff"), url("../fonts/radikal/radikal_light.svg#radikal_light") format("svg"), url("../fonts/radikal/radikal_light.ttf") format("truetype");
+}
 
 /* Reset */
 *{
@@ -35,8 +39,8 @@ h1, h2, h3, h4, h5, h6 {
 
 /*====================================
  Layout
-====================================*/
-header, footer {
+ ====================================*/
+ header, footer {
   width: 100%;
   width: 100vw;
 
@@ -183,8 +187,8 @@ button#send {
 
   color: #000;
   width: calc(100% - 200px);
-    float: left;
-    overflow: hidden;
+  float: left;
+  overflow: hidden;
 
   overflow-y: scroll;
 }
@@ -202,9 +206,9 @@ button#send {
 
 /*====================================
  Messages style
-====================================*/
+ ====================================*/
 
-.message-row {
+ .message-row {
   float: left;
   width: 100%;
 }
@@ -285,7 +289,7 @@ message .-message p {
   font-family: 'radikal_regular';
   word-wrap: normal;
   -webkit-user-select: text;
-    -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 
@@ -306,41 +310,41 @@ message .-message p {
 
 /* Style code blocks */
 pre {
-    font-size: 95%;
-    line-height: 140%;
-    white-space: pre;
-    white-space: pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -o-pre-wrap;
+  font-size: 95%;
+  line-height: 140%;
+  white-space: pre;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
 }
 
 code {
-    font-size: 95%;
-    line-height: 140%;
-    white-space: pre;
-    white-space: pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -o-pre-wrap;
-    background: #faf8f0;
+  font-size: 95%;
+  line-height: 140%;
+  white-space: pre;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  background: #faf8f0;
 
-    display: inline;
-    padding: 0.25em 0.5em;
+  display: inline;
+  padding: 0.25em 0.5em;
 
-    letter-spacing: -1.159999996423721px;
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-    text-align: left;
-    text-rendering: optimizeLegibility;
-    -webkit-box-shadow: inset 0 0 0 .1em #eff0f2;
-    box-shadow: inset 0 0 0 .1em #eff0f2;
-    border-radius: 4.80000019073486px 4.80000019073486px 4.80000019073486px 4.80000019073486px;
-    font-family: Monaco, Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier, monospace;
-    font-weight: 200;
-    overflow: auto;
-    position: relative;
-    background: #2d2d2d;
-    color: #fff;
+  letter-spacing: -1.159999996423721px;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  text-align: left;
+  text-rendering: optimizeLegibility;
+  -webkit-box-shadow: inset 0 0 0 .1em #eff0f2;
+  box-shadow: inset 0 0 0 .1em #eff0f2;
+  border-radius: 4.80000019073486px 4.80000019073486px 4.80000019073486px 4.80000019073486px;
+  font-family: Monaco, Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier, monospace;
+  font-weight: 200;
+  overflow: auto;
+  position: relative;
+  background: #2d2d2d;
+  color: #fff;
 }
 
 pre code {
