--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -325,24 +325,17 @@ code {
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -o-pre-wrap;
-  background: #faf8f0;
-
   display: inline;
   padding: 0.25em 0.5em;
-
-  letter-spacing: -1.159999996423721px;
+  letter-spacing: -1px;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-  text-align: left;
   text-rendering: optimizeLegibility;
-  -webkit-box-shadow: inset 0 0 0 .1em #eff0f2;
-  box-shadow: inset 0 0 0 .1em #eff0f2;
-  border-radius: 4.80000019073486px 4.80000019073486px 4.80000019073486px 4.80000019073486px;
+  border-radius: 5px;
   font-family: Monaco, Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier, monospace;
   font-weight: 200;
   overflow: auto;
-  position: relative;
   background: #2d2d2d;
   color: #fff;
 }
