--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,3 +1,4 @@
-You're logged in!
-
-<a href='/'>Start chatting</a>
+<div class="center">
+  You're logged in! 
+  <a href='/' class="button">Start chatting</a>
+</div>
