--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -24,17 +24,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-  box-sizing: border-box;
-  color: #fff;
-  font-family: 'Radikal_regular', Arial;
-  font-weight: 300;
-}
-
-html, body {
+ html, body {
+  float: left;
   width: 100%;
   margin: 0;
   padding: 0;
+  color: #fff;
+  font-family: 'Radikal_regular', Arial;
+  font-weight: 300;
 }
 
 h1, h2, h3, h4, h5, h6 {
