--- a/src/public/sass/style.scss
+++ b/src/public/sass/style.scss
@@ -1,400 +1,13 @@
-/* Fonts */
-
-@font-face {
-  font-family: radikal_regular;
-  src: url("../fonts/radikal/radikal_regular.eot?") format("eot"), url("../fonts/radikal/radikal_regular.woff") format("woff"), url("../fonts/radikal/radikal_regular.svg#radikal_regular") format("svg"), url("../fonts/radikal/radikal_regular.ttf") format("truetype");
-}
-
-
-@font-face {
-  font-family: radikal_bold;
-  src: url("../fonts/radikal/radikal_bold.eot?") format("eot"), url("../fonts/radikal/radikal_bold.woff") format("woff"), url("../fonts/radikal/radikal_bold.svg#radikal_bold") format("svg"), url("../fonts/radikal/radikal_bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: radikal_light;
-  src: url("../fonts/radikal/radikal_light.eot?") format("eot"), url("../fonts/radikal/radikal_light.woff") format("woff"), url("../fonts/radikal/radikal_light.svg#radikal_light") format("svg"), url("../fonts/radikal/radikal_light.ttf") format("truetype");
-}
-
-/* Reset */
-* {
-  box-sizing: inherit;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-}
-
- html, body {
-  box-sizing: border-box;
-  float: left;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  color: #fff;
-  font-family: 'Radikal_regular', Arial;
-  font-weight: 300;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-}
-
-/*====================================
- Layout
- ====================================*/
- header, footer {
-  width: 100%;
-  width: 100vw;
-
-  padding: 0 16px;
-  float: left;
-  min-height: 50px;
-  background: linear-gradient(to left, #2296D4 , #8283C9 );
-  position: fixed;
-  z-index: 99999999999999999999;
-  line-height: 50px;
-  color: #fff;
-}
-
-header {
-  top: 0;
-  height: 75px;
-  line-height: 75px;
-}
-
-footer {
-  bottom: 0;
-}
-
-aside {
-  position: fixed;
-  top: 75px;
-  right: 0;
-  height: calc(100% - 125px);
-  z-index: 2;
-  max-width: 200px;
-  background: #fff;
-  border-left: 1px solid #eff0f2;
-  transition: transform .25s ease;
-}
-
-aside ul {
-  padding: 1em 8px;
-  margin: 0;
-  list-style: none;
-}
-
-aside ul li {
-  display: inline-block;
-  float: left;
-  max-width: 20%;
-  padding: 0 4px;
-  display: block;
-}
-
-aside ul li img {
-  max-width: 100%;
-}
-
-/* User infos */
-.user_infos {
-  max-width: 232px;
-  float: right;
-  height: 50px;
-  margin-top: -50px;
-  text-align:  left;
-  width: 100%;
-}
-.user_infos .icon {
-  float: left;
-  line-height: 0;
-  margin: 0 -1em;
-}
-.user_infos #name {
-  float: right;
-  position: absolute;
-  right: 16px;
-  padding: 8px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  outline: none;
-  min-width: 200px;
-  top: 0;
-  padding: 0;
-  margin: 0;
-}
-
-div#message {
-  position: absolute;
-  width: calc(100% - 200px);
-  bottom: 0;
-  border-top: 1px solid #eff0f2;
-  left: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  resize: none;
-  min-height: 50px;
-  outline: none;
-  padding: 1em 0;
-  padding-left: 60px;
-  background: white;
-  color:#69778C;
-  line-height: 1;
-}
-button#send {
-  display: block;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-
-  right: 0;
-  position: absolute;
-  top: 0;
-  min-width: 200px;
-  height: 100%;
-  background: linear-gradient(to left, #2296D4 , #8283C9 );
-  font-size: 1.4em;
-  color: #fff;
-  display: block;
-  border: none;
-  cursor: pointer;
-}
-
-.user_avatar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  z-index: 2;
-  max-width: 50px;
-  max-height: 50px;
-  padding: 8px 16px;
-}
-
-.user_avatar img {
-  max-width: 32px;
-  border-radius: 10px;
-}
-
-
-/* Zone message */
-.chat-messages {
-  position: absolute;
-  height: 100%;
-  height: 100vh;
-  padding-top: 75px;
-  padding-bottom: 50px;
-
-  color: #000;
-  width: calc(100% - 200px);
-  float: left;
-  overflow: hidden;
-
-  overflow-y: scroll;
-}
-
-/*====================================
- Messages style
- ====================================*/
-
- .message-row {
-  float: left;
-  width: 100%;
-}
-
-message {
-  float: left;
-  width: calc(100% + 2em);
-  height: auto;
-
-  border-top: 1px solid #eff0f2;
-  border-bottom: 1px solid #eff0f2;
-  box-shadow: inset 120px 0 0 #FFF, calc(120 + 25px) 0 0 #7f57cf; /* 185px because 120 + 25px */
-  line-height: 1;
-  position: relative;
-  margin-top: 8px;
-}
+@import 'variables',
+        'base',
+        'layout',
+        'messages',
+        'icons',
+        'buttons',
+        'utils';
 
 
 
-message .user,
-message .-message {
-  float: left;
-}
-
-message .user  {
-  position: relative;
-  width: calc( 52px + 16px + 16px );
-  left: 0;
-  padding-right: 16px;
-}
-
-message .user .-avatar {
-  width: 100%;
-  border-radius: 10px;
-  position: relative;
-  float: left;
-  padding: 16px 0;
-}
-
-message .user .-avatar img  {
-  width: 52px;
-  height: 52px;
-  border-radius: 10px;
-  margin: 0 16px;
-  display: block;
-
-}
-
-message .user .-name {
-  display: none;
-
-}
-
-message .-message {
-  padding: 1em 1em;
-  width: calc(100% - 120px);
-  background: white;
-  border-left: 1px solid #eff0f2;
-  float: left;
-  min-height: 84px;
-}
-
-/* Style text of messages */
-message .-message p {
-  margin: 0;
-  padding: 0;
-
-  white-space: pre-wrap;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-
-  font-size: 14px;
-  line-height: 24px;
-  color: #69778C;
-
-  font-family: 'radikal_regular';
-  word-wrap: normal;
-  -webkit-user-select: text;
-  -webkit-font-smoothing: subpixel-antialiased;
-}
 
 
-/* A few icons */
-.icon {
-  display: inline-block;
-  width: 28px;
-  height: 28px;
-}
-.icon.icon-github {
-  background: url(../img/github.svg)no-repeat center center / contain;
-}
-
-/* Some utils */
-.avatar {
-  border-radius: 10px;
-}
-
-/**/
-blockquote {
-  border-left: 2px solid #CCC;
-  margin: 0;
-  padding: 0.2em 0.45em;
-  font-weight: 400;
-}
-blockquote p {
-  font-size: 14px;
-  line-height: inherit;
-  color: inherit;
-  font-family: inherit;
-  color: red;
-  font-style: italic;
-  font-family: 'radikal_light', sans-serif;
-  font-weight: 300;
-}
-/* Style code blocks */
-pre {
-  font-size: 95%;
-  line-height: 140%;
-  white-space: pre;
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -o-pre-wrap;
-}
-
-code {
-  font-size: 95%;
-  line-height: 140%;
-  white-space: pre;
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -o-pre-wrap;
-  display: inline;
-  padding: 0.25em 0.5em;
-  letter-spacing: -1px;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  border-radius: 5px;
-  font-family: Monaco, Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', 'Courier New', Courier, monospace;
-  font-weight: 200;
-  overflow: auto;
-  background: #2d2d2d;
-  color: #fff;
-}
-
-pre code {
-  display: inline-block;
-}
-
-
-@media all and (max-width: 720px) {
-  aside {
-    transform: translate3d(100%, 0, 0);
-  }
-
-  .chat-messages {
-    width: 100%;
-  }
-
-  button#send {
-    min-width: 100px;
-  }
-
-  div#message {
-    width: calc(100% - 100px);
-  }
-}
-
-
-
-/* utils */
-.center {
-  text-align: center;
-
-}
-
-/* buttons */
-
-.button {
-  text-align: center;
-  display: block;
-  width: 300px;
-  height: 45px;
-  line-height: 45px;
-  border-radius: 3px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: #2094D3;
-  color: #fff;
-  transform: translate(-50%, -50%);
-  text-decoration: none;
-  
-}
 
